--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vendure-plugin-template",
-  "version": "1.0.0",
-  "description": "Plugin template",
-  "author": "Martijn van de Brug <martijn@pinelab.studio>",
-  "repository": "https://github.com/vendure-ecommerce/plugin-template",
+  "name": "vendure-plugin-disable-anonymous-access",
+  "version": "0.1.0",
+  "description": "Disable anonymous access to shop-api and only allow to defined methods like authenticate",
+  "author": "ARRRRNY",
+  "repository": "https://github.com/arrrrny/vendure-plugin-disable-anonymous-access",
   "license": "GPL-3.0-or-later",
   "private": false,
   "engines": {
@@ -36,5 +36,12 @@
     "typescript": "5.3.3",
     "unplugin-swc": "^1.5.1",
     "vitest": "^2.0.4"
-  }
+  },
+  "keywords": [
+    "vendure",
+    "vendure-plugin",
+    "disable-anonymous-access",
+    "shop-api",
+    "authentication"
+  ]
 }
